Update descriptions for Steve Jobs and Jordan Belfort

--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
     <h2 class="mb-4">Famous Leaders and Their Speaking Styles</h2>
     <div class="row g-4">
       <div class="col-md-4">
+        <h5 class="card-title">Steve Jobs (2015)</h5>
         <div class="card h-100 shadow-sm">
           <img src="images/jobs.jpg" class="card-img-top" alt="Steve Jobs">
           <div class="card-body">
-            <h5 class="card-title">Steve Jobs</h5>
-            <p class="card-text">Co-founder of Apple Inc. Known for his minimalist slides, storytelling, and the famous phrase “One more thing.” Jobs mastered emotional pacing, combining clarity and drama to keep his audience captivated.</p>
+            <p class="card-text">The story of the truly triumphant success of Steve Jobs and his huge corporation, which turned the concept of technological achievements upside down, giving the world unprecedented opportunities, products and technologies. Steve Jobs' passion for innovation, combined with his skilful use of linguistic strategies, allows us to explore the mechanisms of his influence on his audience</p>
             <p><em>Key trait:</em> Simplicity and suspense.</p>
           </div>
         </div>
       </div>
 
       <div class="col-md-4">
+      <h5 class="card-title">The Wolf of Wall Street</h5>
         <div class="card h-100 shadow-sm">
           <img src="images/musk.jpg" class="card-img-top" alt="Elon Musk">
           <div class="card-body">
-            <h5 class="card-title">Elon Musk</h5>
-            <p class="card-text">CEO of Tesla and SpaceX. Musk uses visionary rhetoric and clear futuristic framing — such as “Make life multiplanetary.” His authenticity and off-script tone create a sense of honesty and ambition.</p>
+            <p class="card-text">The story of the meteoric rise of Jordan Belfort and his high-risk brokerage empire unveils the darker side of financial ambition, where charisma and linguistic manipulation become powerful instruments of control. Belfort’s unrestrained drive for wealth, combined with his masterful use of aggressive and persuasive speech strategies, allows us to examine the mechanisms of his influence on both his employees and the audience.</p>
             <p><em>Key trait:</em> Visionary appeal.</p>
           </div>
         </div>
