Revise content and add video trailers in index.html
Updated content and structure of the index.html file, including modifications to text and the addition of video trailers.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="card h-100 shadow-sm">
           <img src="images/jobs.jpg" class="card-img-top" alt="Steve Jobs">
           <div class="card-body">
-            <p class="card-text">The story of the truly triumphant success of Steve Jobs and his huge corporation, which turned the concept of technological achievements upside down, giving the world unprecedented opportunities, products and technologies. Steve Jobs' passion for innovation, combined with his skilful use of linguistic strategies, allows us to explore the mechanisms of his influence on his audience</p>
+            <p class="card-text">The story of the truly triumphant success of Steve Jobs and his huge corporation, which turned the concept of technological achievements upside down, giving the world [...]
             <p><em>Key trait:</em> Simplicity and suspense.</p>
           </div>
         </div>
@@ -52,7 +52,7 @@
         <div class="card h-100 shadow-sm">
           <img src="images/musk.jpg" class="card-img-top" alt="Elon Musk">
           <div class="card-body">
-            <p class="card-text">The story of the meteoric rise of Jordan Belfort and his high-risk brokerage empire unveils the darker side of financial ambition, where charisma and linguistic manipulation become powerful instruments of control. Belfort’s unrestrained drive for wealth, combined with his masterful use of aggressive and persuasive speech strategies, allows us to examine the mechanisms of his influence on both his employees and the audience.</p>
+            <p class="card-text">The story of the meteoric rise of Jordan Belfort and his high-risk brokerage empire unveils the darker side of financial ambition, where charisma and linguistic manipu[...]
             <p><em>Key trait:</em> Visionary appeal.</p>
           </div>
         </div>
@@ -60,11 +60,16 @@
 
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="images/oprah.jpg" class="card-img-top" alt="Oprah Winfrey">
           <div class="card-body">
-            <h5 class="card-title">Oprah Winfrey</h5>
-            <p class="card-text">Talk show host and philanthropist. Oprah is a master of pathos — connecting through empathy, storytelling, and personal experience. Her ability to make audiences feel seen and heard is unmatched.</p>
-            <p><em>Key trait:</em> Emotional connection.</p>
+            <h5 class="card-title mb-3">Trailers</h5>
+            <video width="100%" controls poster="images/trailer1-poster.jpg" class="mb-3">
+              <source src="videos/trailer1.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+            <video width="100%" controls poster="images/trailer2-poster.jpg">
+              <source src="videos/trailer1.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
           </div>
         </div>
       </div>
@@ -118,7 +123,7 @@
     <h3>Login</h3>
     <form id="loginForm">
       <input id="loginEmail" type="email" placeholder="Email" class="form-control mb-2">
-      <input id="loginPass" type="password" placeholder="Password" class="form-control mb-2">
+      <input id="loginPass" type="password" class="form-control mb-2">
       <button class="btn btn-primary">Login</button>
     </form>
     <div id="loginMsg" class="text-info mt-2"></div>
