--- a/index.html
+++ b/index.html
@@ -4,131 +4,69 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Speech Strategies of Business Leaders</title>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <style>
     body { background-color: #f8f9fa; }
     header { background: #0d6efd; color: white; padding: 1rem; }
-    header h1 { font-size: 1.8rem; margin: 0; }
-    nav ul { list-style: none; display: flex; justify-content: flex-end; gap: 1rem; margin: 0; padding: 0; }
+    nav ul { list-style: none; display: flex; justify-content: flex-end; gap: 1rem; }
     nav a { color: white; text-decoration: none; font-weight: 500; }
     nav a:hover { text-decoration: underline; }
-    .page { display: none; }
-    .container-main { margin-top: 2rem; }
+    .dropdown:hover .dropdown-menu {
+      display: block;
+      margin-top: 0; /* removes small gap */
+    }
+
+    /* Optional: smooth fade-in */
+    .dropdown-menu {
+      transition: all 0.3s ease;
+    }
+
+    /* Prevent parent link from being clickable */
+    .dropdown > a {
+      pointer-events: none; /* makes top item not clickable */
+    }
+
+    iframe {
+      width: 100%;
+      height: 600px;
+      border: 1px solid #ccc;
+      margin-top: 10px;
+    }
   </style>
 </head>
+
 <body>
 
 <header class="d-flex justify-content-between align-items-center">
   <h1>Speech Strategies of Business Leaders</h1>
   <nav>
     <ul>
-      <li><a href="#" class="nav-link" data-target="home">Home</a></li>
-      <li><a href="#" class="nav-link" data-target="strategies">Speech Strategies</a></li>
-      <li><a href="#" class="nav-link" data-target="glossary">Glossary</a></li>
-      <li><a href="#" class="nav-link" data-target="tests" id="testsMenu">Tests</a></li>
-      <li><a href="#" class="nav-link" data-target="register" id="userMenu">Register/Login</a></li>
+      <li><a href="home.html" class="nav-link">Home</a></li>
+
+
+
+      <li class="dropdown">
+        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Speech Strategies</a>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="strategies/strategy1.html">Aggressive Dominance</a></li>
+          <li><a class="dropdown-item" href="strategies/strategy2.html">Humorous Ironical</a></li>
+          <li><a class="dropdown-item" href="strategies/strategy3.html">Motivational</a></li>
+          <li><a class="dropdown-item" href="strategies/strategy4.html">Persuasive Manipulative</a></li>
+          <li><a class="dropdown-item" href="strategies/strategy5.html">Self Presentation</a></li>
+        </ul>
+      </li>
+
+
+      <li><a href="glossary.html" class="nav-link">Glossary</a></li>
+      <li><a href="tests.html" class="nav-link">Tests</a></li>
+      <li><a href="register.html" class="nav-link">Register/Login</a></li>
     </ul>
   </nav>
 </header>
 
-<div class="container container-main">
-  <!-- HOME -->
-  <section id="home" class="page">
-    <h2 class="mb-4">Famous Leaders and Their Speaking Styles</h2>
-    <div class="row g-4">
-      <div class="col-md-4">
-        <h5 class="card-title">Steve Jobs (2015)</h5>
-        <div class="card h-100 shadow-sm">
-          <img src="images/jobs.jpg" class="card-img-top" alt="Steve Jobs">
-          <div class="card-body">
-            <p class="card-text">The story of the truly triumphant success of Steve Jobs and his huge corporation, which turned the concept of technological achievements upside down, giving the world [...]
-            <p><em>Key trait:</em> Simplicity and suspense.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-      <h5 class="card-title">The Wolf of Wall Street</h5>
-        <div class="card h-100 shadow-sm">
-          <img src="images/musk.jpg" class="card-img-top" alt="Elon Musk">
-          <div class="card-body">
-            <p class="card-text">The story of the meteoric rise of Jordan Belfort and his high-risk brokerage empire unveils the darker side of financial ambition, where charisma and linguistic manipu[...]
-            <p><em>Key trait:</em> Visionary appeal.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
-          <div class="card-body">
-            <h5 class="card-title mb-3">Trailers</h5>
-            <video width="100%" controls poster="images/trailer1-poster.jpg" class="mb-3">
-              <source src="videos/trailer1.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-            <video width="100%" controls poster="images/trailer2-poster.jpg">
-              <source src="videos/trailer1.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- STRATEGIES -->
-  <section id="strategies" class="page">
-    <h2>Speech Strategies</h2>
-    <table class="table table-bordered">
-      <thead><tr><th>Strategy</th><th>Description</th><th>Example</th></tr></thead>
-      <tbody>
-        <tr><td>Repetition</td><td>Repeating key phrases for emphasis.</td><td>“One more thing…” — Steve Jobs</td></tr>
-        <tr><td>Visionary framing</td><td>Setting a long-term inspiring goal.</td><td>“Make life multiplanetary.” — Elon Musk</td></tr>
-        <tr><td>Storytelling</td><td>Using personal stories to connect emotionally.</td><td>Oprah Winfrey’s life anecdotes.</td></tr>
-        <tr><td>Contrast</td><td>Comparing two ideas to highlight difference.</td><td>Jobs: “We’re not just making computers; we’re changing the world.”</td></tr>
-      </tbody>
-    </table>
-  </section>
-
-  <!-- GLOSSARY -->
-  <section id="glossary" class="page">
-    <h2>Glossary</h2>
-    <table class="table table-striped">
-      <tbody id="glossary-body"></tbody>
-    </table>
-  </section>
-
-  <!-- TESTS -->
-  <section id="tests" class="page">
-    <h2>Tests</h2>
-    <div id="lockedMessage" class="alert alert-warning">You must log in or register to access the tests.</div>
-    <div id="test-controls" class="d-none">
-      <input type="file" id="loadTestFile" accept=".json" class="form-control w-auto d-inline-block">
-      <button id="startTest" class="btn btn-primary ms-2" disabled>Start Test</button>
-    </div>
-    <div id="test-area" class="mt-4"></div>
-  </section>
-
-  <!-- REGISTER -->
-  <section id="register" class="page">
-    <h2>Registration / Login</h2>
-    <form id="regForm" class="mb-3">
-      <input id="regName" type="text" placeholder="Name" class="form-control mb-2">
-      <input id="regEmail" type="email" placeholder="Email" class="form-control mb-2">
-      <input id="regPass" type="password" placeholder="Password" class="form-control mb-2">
-      <button class="btn btn-success">Register</button>
-    </form>
-    <div id="regMsg" class="text-success mb-4"></div>
-
-    <h3>Login</h3>
-    <form id="loginForm">
-      <input id="loginEmail" type="email" placeholder="Email" class="form-control mb-2">
-      <input id="loginPass" type="password" class="form-control mb-2">
-      <button class="btn btn-primary">Login</button>
-    </form>
-    <div id="loginMsg" class="text-info mt-2"></div>
-  </section>
-</div>
+<div class="container mt-4" id="content"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/app.js"></script>
